[package]
name = "docker_engine_api_wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Jean Vides <jeanservices.co@gmail.com>"]
repository = "https://github.com/JeanVydes/docker-engine-api-wrapper"
keywords = ["docker", "engine", "api", "wrapper", "hyper", "hyperlocal", "tokio"]
readme = "README.md"
documentation = "https://docs.rs/docker_engine_api_wrapper"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
hyperlocal = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"