[package]
name = "deaw"
description = "A simple way to interact with the Docker Engine API"
version = "0.1.0"
edition = "2021"
authors = ["Jean Vides <jeanservices.co@gmail.com>"]
repository = "https://github.com/JeanVydes/docker-engine-api-wrapper"
categories = ["devops", "docker", "containers"]
keywords = ["docker", "engine", "api", "wrapper", "hyper", "hyperlocal", "tokio"]
readme = "README.md"
documentation = "https://github.com/JeanVydes/docker-engine-api-wrapper"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
hyperlocal = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"