[package]
name = "docker_engine_api"
description = "A simple way to interact with the Docker Engine API"
version = "0.1.3"
edition = "2021"
authors = ["Jean Vides <jean@comediante.org>"]
repository = "https://github.com/JeanVydes/docker-engine-api-wrapper"
categories = ["api-bindings", "asynchronous", "network-programming"]
keywords = ["docker", "engine", "api", "wrapper"]
readme = "README.md"
documentation = "https://github.com/JeanVydes/docker-engine-api-wrapper"
license = "MIT"
exclude = [
    "*.md",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
hyperlocal = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"